--- a/src/proyectopsb/VentanaLogin.form
+++ b/src/proyectopsb/VentanaLogin.form
@@ -115,13 +115,13 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Imagenes/Login.jpg"/>
+              <Image iconType="3" name="/imagenes/Login.jpg"/>
             </Property>
             <Property name="text" type="java.lang.String" value="jLabel1"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="0" y="0" width="420" height="880"/>
+              <AbsoluteConstraints x="0" y="0" width="419" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
